[tool.poetry]
name = "python-academia"
version = "0.1.0"
description = ""
authors = ["Felipe Bidu <felipe@felipevr.com>"]
readme = "README.md"
packages = [{include = "python_academia"}]

[tool.poetry.dependencies]
python = "^3.11"
notebook = "^7.0.2"
matplotlib = "^3.7.2"
ipympl = "^0.9.3"
plotly = "^5.16.1"
pandas = "^2.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
